refactoring of old reflection calls in IJ plugin